fixed SendResetPasswordEmailPage overflow issue on small screens

--- a/src/app/reset-password/SendResetPasswordEmailPage.module.css
+++ b/src/app/reset-password/SendResetPasswordEmailPage.module.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   width: 75%;
-  height: 70%;
+  flex: 0 0 70vh;
   border: 5px white solid;
   background-image: url("../../../public/inverted_bg.png");
   background-size: 100% 100%;
